Update to 1.20.6
Fuck you Java why you remove string templates :c